[package]
name = "rustsdr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.10", features = ["codec", "io"] }
num-complex = "0.4"
pin-project = "1"
itertools = "0.12.1"
futures = "0.3.30"
num-traits = "0.2.19"